# mlprojects

./: .gitignore  api_logger.py  main.py  model_loader.py  predictor.py  pyproject.toml  schema.py  setup.py
artifacts/: model.pkl  preprocessor.pkl  raw.csv  test.csv  train.csv
notebook/: 1 . EDA STUDENT PERFORMANCE .ipynb  2. MODEL TRAINING.ipynb
src/: exception.py  logger.py  utils.py
src/components/: data_ingestion.py  data_transformation.py  model_trainer.py
src/pipeline/: predict_pipeline.py
